Changed secret to have Script and Value attributes - one stores script to evaluate, another one - evaluated value; added validation for script when secret is created and updated
