# api/group/secrets/types.go
@@ -13,8 +13,7 @@ type (
 		FolderUID string `json:"FolderUID" description:"Folder unique identifier" example:"/"`
 		Name      string `json:"Name" description:"Secret name" example:"DEBUG"`
 		Value     string `json:"Value" description:"Secret value" example:"Test"`
-		Type      string `json:"Type" description:"Secret value type" example:"int"`
-		IsDynamic bool   `json:"IsDynamic" description:"Does secret has dynamic value" example:"false"`
+		Script    string `json:"Script" description:"Script for dynamically calculated value" example:"time.RFC3339"`
 	}
 
 	Folder struct {
@@ -28,8 +27,7 @@ type (
 		FolderUID string `json:"FolderUID" description:"Folder unique identifier" example:"/"`
 		Name      string `json:"Name" description:"Secret name" example:"DEBUG"`
 		Value     string `json:"Value" description:"Secret value" example:"Test"`
-		Type      string `json:"Type" description:"Secret value type" example:"int"`
-		IsDynamic bool   `json:"IsDynamic" description:"Does secret has dynamic value" example:"false"`
+		Script    string `json:"Script" description:"Script for dynamically calculated value" example:"time.RFC3339"`
 	}
 
 	GetSecretsRQ struct {
