# cmd/api/main.go
@@ -2,9 +2,14 @@ package main
 
 import (
 	"context"
+	"encoding/json"
 	"github.com/joho/godotenv"
+	"github.com/nicksnyder/go-i18n/v2/i18n"
 	"hideout/api"
 	apiconfig "hideout/cmd/api/config"
+	"hideout/internal/folders"
+	secrets2 "hideout/internal/secrets"
+	"hideout/internal/translations"
 	"hideout/services/secrets"
 	"hideout/structs"
 	"log"
@@ -30,7 +35,8 @@ func main() {
 		}
 	}()
 
-	secretsSvc, errCreateService := secrets.NewService(ctx, apiconfig.Settings.SecretsRepository, apiconfig.Settings.FoldersRepository, &structs.Folders, &structs.Secrets)
+	secretsSvc, errCreateService := secrets.NewService(ctx, apiconfig.Settings.SecretsRepository, apiconfig.Settings.FoldersRepository,
+		&structs.Folders, &structs.Secrets)
 	if errCreateService != nil {
 		log.Fatal(errCreateService)
 	}
@@ -40,104 +46,111 @@ func main() {
 		log.Fatal(errLoad)
 	}
 
-	/*
-		rootFolder, errCreateRootFolder := secretsSvc.CreateFolder(ctx, folders.Folder{Name: ""})
-		if errCreateRootFolder != nil {
-			log.Fatal(errCreateRootFolder)
-		}
-		testFolder, errCreateTestFolder := secretsSvc.CreateFolder(ctx, folders.Folder{ParentID: rootFolder.ID, Name: "test"})
-		if errCreateTestFolder != nil {
-			log.Fatal(errCreateTestFolder)
-		}
-		anotherTestFolder, errCreateAnotherTestFolder := secretsSvc.CreateFolder(ctx, folders.Folder{ParentID: rootFolder.ID, Name: "another-test"})
-		if errCreateAnotherTestFolder != nil {
-			log.Fatal(errCreateAnotherTestFolder)
-		}
-		yetAnotherTestFolder, errCreateYetAnotherTestFolder := secretsSvc.CreateFolder(ctx, folders.Folder{ParentID: rootFolder.ID, Name: "yet-another-test"})
-		if errCreateYetAnotherTestFolder != nil {
-			log.Fatal(errCreateYetAnotherTestFolder)
-		}
-		rootSecret, errCreateRootSecret := secretsSvc.CreateSecret(ctx, secrets2.Secret{FolderID: rootFolder.ID, Name: "Root secret", Value: "123", Type: "integer", IsDynamic: false})
-		if errCreateRootSecret != nil {
-			log.Fatal(errCreateRootSecret)
-		}
-		_, errCreateSecret1 := secretsSvc.CreateSecret(ctx, secrets2.Secret{FolderID: testFolder.ID, Name: "Secret #1", Value: "123", Type: "integer", IsDynamic: false})
-		if errCreateSecret1 != nil {
-			log.Fatal(errCreateSecret1)
-		}
-		_, errCreateSecret2 := secretsSvc.CreateSecret(ctx, secrets2.Secret{FolderID: testFolder.ID, Name: "Secret #2", Value: "456", Type: "integer", IsDynamic: false})
-		if errCreateSecret2 != nil {
-			log.Fatal(errCreateSecret2)
-		}
-		_, errCreateSecret3 := secretsSvc.CreateSecret(ctx, secrets2.Secret{FolderID: testFolder.ID, Name: "Secret #3", Value: "789", Type: "integer", IsDynamic: false})
-		if errCreateSecret3 != nil {
-			log.Fatal(errCreateSecret3)
-		}
-		_, errCreateDynamicSecret := secretsSvc.CreateSecret(ctx, secrets2.Secret{FolderID: rootFolder.ID, Name: "Dynamic Secret #1", Value: "time.now()", Type: "string", IsDynamic: true})
-		if errCreateDynamicSecret != nil {
-			log.Fatal(errCreateDynamicSecret)
-		}
+	Localizer := i18n.NewLocalizer(apiconfig.Settings.Bundle, translations.DefaultLanguage)
+	rootFolder, errCreateRootFolder := secretsSvc.CreateFolder(ctx, folders.Folder{Name: ""})
+	if errCreateRootFolder != nil {
+		log.Fatal(errCreateRootFolder)
+	}
+	testFolder, errCreateTestFolder := secretsSvc.CreateFolder(ctx, folders.Folder{ParentID: rootFolder.ID, Name: "test"})
+	if errCreateTestFolder != nil {
+		log.Fatal(errCreateTestFolder)
+	}
+	anotherTestFolder, errCreateAnotherTestFolder := secretsSvc.CreateFolder(ctx, folders.Folder{ParentID: rootFolder.ID,
+		Name: "another-test"})
+	if errCreateAnotherTestFolder != nil {
+		log.Fatal(errCreateAnotherTestFolder)
+	}
+	yetAnotherTestFolder, errCreateYetAnotherTestFolder := secretsSvc.CreateFolder(ctx,
+		folders.Folder{ParentID: rootFolder.ID, Name: "yet-another-test"})
+	if errCreateYetAnotherTestFolder != nil {
+		log.Fatal(errCreateYetAnotherTestFolder)
+	}
+	rootSecret, errCreateRootSecret := secretsSvc.CreateSecret(ctx, Localizer, secrets2.Secret{FolderID: rootFolder.ID,
+		Name: "ROOT_SECRET", Value: "123", Script: ""})
+	if errCreateRootSecret != nil {
+		log.Fatal(errCreateRootSecret)
+	}
+	_, errCreateSecret1 := secretsSvc.CreateSecret(ctx, Localizer, secrets2.Secret{FolderID: testFolder.ID,
+		Name: "SECRET_ONE", Value: "123", Script: ""})
+	if errCreateSecret1 != nil {
+		log.Fatal(errCreateSecret1)
+	}
+	_, errCreateSecret2 := secretsSvc.CreateSecret(ctx, Localizer, secrets2.Secret{FolderID: testFolder.ID,
+		Name: "SECRET_TWO", Value: "456", Script: ""})
+	if errCreateSecret2 != nil {
+		log.Fatal(errCreateSecret2)
+	}
+	_, errCreateSecret3 := secretsSvc.CreateSecret(ctx, Localizer, secrets2.Secret{FolderID: testFolder.ID,
+		Name: "SECRET_THREE", Value: "789", Script: ""})
+	if errCreateSecret3 != nil {
+		log.Fatal(errCreateSecret3)
+	}
+	_, errCreateDynamicSecret := secretsSvc.CreateSecret(ctx, Localizer, secrets2.Secret{FolderID: rootFolder.ID,
+		Name: "DYNAMIC_SECRET_ONE", Value: "", Script: "time.RFC3339"})
+	if errCreateDynamicSecret != nil {
+		log.Fatal(errCreateDynamicSecret)
+	}
 
-		tree, errGetTree := secretsSvc.Tree(ctx, rootFolder.ID)
-		if errGetTree != nil {
-			log.Fatal(errGetTree)
-		}
+	tree, errGetTree := secretsSvc.Tree(ctx, rootFolder.ID)
+	if errGetTree != nil {
+		log.Fatal(errGetTree)
+	}
 
-		jsonResult, errMarshal := json.Marshal(tree)
-		if errMarshal != nil {
-			log.Fatal(errMarshal)
-		}
-		log.Println(string(jsonResult))
+	jsonResult, errMarshal := json.Marshal(tree)
+	if errMarshal != nil {
+		log.Fatal(errMarshal)
+	}
+	log.Println(string(jsonResult))
 
-		_, _, errCopy := secretsSvc.Copy(ctx, []*folders.Folder{testFolder}, []*secrets2.Secret{rootSecret},
-			rootFolder.ID, anotherTestFolder.ID)
-		if errCopy != nil {
-			log.Fatal(errCopy)
-		}
+	_, _, errCopy := secretsSvc.Copy(ctx, []*folders.Folder{testFolder}, []*secrets2.Secret{rootSecret},
+		rootFolder.ID, anotherTestFolder.ID)
+	if errCopy != nil {
+		log.Fatal(errCopy)
+	}
 
-		tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
-		if errGetTree != nil {
-			log.Fatal(errGetTree)
-		}
+	tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
+	if errGetTree != nil {
+		log.Fatal(errGetTree)
+	}
 
-		jsonResult, errMarshal = json.Marshal(tree)
-		if errMarshal != nil {
-			log.Fatal(errMarshal)
-		}
-		log.Println(string(jsonResult))
+	jsonResult, errMarshal = json.Marshal(tree)
+	if errMarshal != nil {
+		log.Fatal(errMarshal)
+	}
+	log.Println(string(jsonResult))
 
-		_, _, errCopy = secretsSvc.Copy(ctx, []*folders.Folder{anotherTestFolder, testFolder}, []*secrets2.Secret{rootSecret},
-			rootFolder.ID, yetAnotherTestFolder.ID)
-		if errCopy != nil {
-			log.Fatal(errCopy)
-		}
+	_, _, errCopy = secretsSvc.Copy(ctx, []*folders.Folder{anotherTestFolder, testFolder}, []*secrets2.Secret{rootSecret},
+		rootFolder.ID, yetAnotherTestFolder.ID)
+	if errCopy != nil {
+		log.Fatal(errCopy)
+	}
 
-		tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
-		if errGetTree != nil {
-			log.Fatal(errGetTree)
-		}
+	tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
+	if errGetTree != nil {
+		log.Fatal(errGetTree)
+	}
 
-		jsonResult, errMarshal = json.Marshal(tree)
-		if errMarshal != nil {
-			log.Fatal(errMarshal)
-		}
-		log.Println(string(jsonResult))
+	jsonResult, errMarshal = json.Marshal(tree)
+	if errMarshal != nil {
+		log.Fatal(errMarshal)
+	}
+	log.Println(string(jsonResult))
 
-		_, _, errDelete := secretsSvc.Delete(ctx, []*folders.Folder{anotherTestFolder}, nil, rootFolder.ID, false)
-		if errDelete != nil {
-			log.Fatal(errDelete)
-		}
+	_, _, errDelete := secretsSvc.Delete(ctx, []*folders.Folder{anotherTestFolder}, nil, rootFolder.ID, false)
+	if errDelete != nil {
+		log.Fatal(errDelete)
+	}
 
-		tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
-		if errGetTree != nil {
-			log.Fatal(errGetTree)
-		}
+	tree, errGetTree = secretsSvc.Tree(ctx, rootFolder.ID)
+	if errGetTree != nil {
+		log.Fatal(errGetTree)
+	}
 
-		jsonResult, errMarshal = json.Marshal(tree)
-		if errMarshal != nil {
-			log.Fatal(errMarshal)
-		}
-		log.Println(string(jsonResult))
-	*/
+	jsonResult, errMarshal = json.Marshal(tree)
+	if errMarshal != nil {
+		log.Fatal(errMarshal)
+	}
+	log.Println(string(jsonResult))
+
 	api.Serve()
 }
