# docs/api/swagger.json
@@ -422,17 +422,13 @@
                     "type": "integer",
                     "example": 1
                 },
-                "IsDynamic": {
-                    "type": "boolean",
-                    "example": false
-                },
                 "Name": {
                     "type": "string",
                     "example": "DEBUG"
                 },
-                "Type": {
+                "Script": {
                     "type": "string",
-                    "example": "int"
+                    "example": "time.RFC3339"
                 },
                 "UID": {
                     "type": "string",
@@ -550,17 +546,13 @@
                     "type": "string",
                     "example": "/"
                 },
-                "IsDynamic": {
-                    "type": "boolean",
-                    "example": false
-                },
                 "Name": {
                     "type": "string",
                     "example": "DEBUG"
                 },
-                "Type": {
+                "Script": {
                     "type": "string",
-                    "example": "int"
+                    "example": "time.RFC3339"
                 },
                 "Value": {
                     "type": "string",
