# internal/secrets/type.go
@@ -9,12 +9,11 @@ import (
 type (
 	Secret struct {
 		model.Model
-		FolderID  uint   `json:"FolderID" bson:"FolderID" xml:"FolderID" yaml:"FolderID" csv:"FolderID" db:"folder_id" gorm:"column:folder_id" description:"Folder unique identifier (link)" example:"0"`
-		UID       string `json:"UID" bson:"UID" xml:"UID" csv:"UID" yaml:"UID" db:"uid" gorm:"column:uid;unique" description:"Secondary unique identifier" example:"abc-def-ghi"`
-		Name      string `json:"Name" bson:"Name" xml:"Name" csv:"Name" yaml:"Name" db:"name" gorm:"column:name" description:"Secret name" example:"DEBUG"`
-		Value     string `json:"Value" bson:"Value" xml:"Value" csv:"Value" yaml:"Value" db:"value" gorm:"column:value" description:"Secret value" example:"Test"`
-		Type      string `json:"Type" bson:"Type" xml:"Type" csv:"Type" yaml:"Type" db:"type" gorm:"column:type" description:"Secret value type" example:"int"`
-		IsDynamic bool   `json:"IsDynamic" bson:"IsDynamic" xml:"IsDynamic" csv:"IsDynamic" yaml:"IsDynamic" db:"is_dynamic" description:"Does secret has a dynamic value" example:"true"`
+		FolderID uint   `json:"FolderID" bson:"FolderID" xml:"FolderID" yaml:"FolderID" csv:"FolderID" db:"folder_id" gorm:"column:folder_id" description:"Folder unique identifier (link)" example:"0"`
+		UID      string `json:"UID" bson:"UID" xml:"UID" csv:"UID" yaml:"UID" db:"uid" gorm:"column:uid;unique" description:"Secondary unique identifier" example:"abc-def-ghi"`
+		Name     string `json:"Name" bson:"Name" xml:"Name" csv:"Name" yaml:"Name" db:"name" gorm:"column:name" description:"Secret name" example:"DEBUG"`
+		Value    string `json:"Value" bson:"Value" xml:"Value" csv:"Value" yaml:"Value" db:"value" gorm:"column:value" description:"Secret value" example:"Test"`
+		Script   string `json:"Script" bson:"Script" xml:"Script" csv:"Script" yaml:"Script" db:"script" description:"Script for dynamic value" example:"time.RFC3339"`
 	}
 
 	Repository interface {
@@ -34,10 +33,9 @@ type (
 
 	ListSecretParams struct {
 		generics.ListParams
-		FolderIDs []uint
-		Name      string
-		IsDynamic uint
-		Types     []string
+		FolderIDs  []uint
+		Name       string
+		Scriptable uint
 	}
 
 	// multiSorter implements the Sort interface, sorting the secrets within.
